--- a/index.css
+++ b/index.css
@@ -14,6 +14,10 @@ body {
   background-position: top;
 }
 
+em {
+  font-style: italic;
+}
+
 div#content a, div#navigation a {
   color: green;
   transition: all .5s;
