--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -27,10 +27,13 @@
 		{% endfor %} 
 
 		{% if post.series != nil %} <br>📚 Series: <a href="/series/#{{ post.series }}" title="See all games in the {{ post.series }} series.">{{ post.series }}</a>
+		{% endif %} 
+		{% if post.suggester != nil %}
+		<br>❤️ Suggested by <a href="{{ post.suggesterurl }}" target="_blank" title="The awesome {{ post.suggester }} suggested this game!">{{ post.suggester }}</a>
 		{% endif %}
 		<br><br>
 		
 		📖 Summary: {{ post.excerpt }}<br><br>
-		<a href="{{ post.link }}" target="_blank">ℹ️ More information</a> 
+		<a href="{{ post.link }}" target="_blank" title="Read more about {{ post.title }} on Wikipedia.org.">ℹ️ More information</a> 
 	</p>
 </div>
