--- a/_includes/widget_archives.html
+++ b/_includes/widget_archives.html
@@ -14,17 +14,6 @@
         </select>
 <br><br>
         <select onchange="location = this.value;">
-            <option value=" ">Filter by developer</option>
-
-            <option value="/developer/#Bluehole Studio">Bluehole Studio</a></option>            
-            <option value="/developer/#Clover Studio">Clover Studio</a></option>
-            <option value="/developer/#Eduweb">Eduweb</a></option>
-            <option value="/developer/#Nintendo">Nintendo</a></option>            
-            <option value="/developer/#Tale of Tales">Tale of Tales</a></option>
-            
-        </select>
-<br><br>
-        <select onchange="location = this.value;">
             <option value=" ">Filter by series</option>
 
             <option value="/series/#Animal Crossing">Animal Crossing</a></option>
@@ -68,6 +57,7 @@
             <option value="/genre/#mmorpg">mmorpg</a></option>            
             <option value="/genre/#rpg">rpg</a></option>
             <option value="/genre/#simulation">simulation</a></option>
+            <option value="/genre/#social">social</a></option>
             
         </select>
 <br><br>
