--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,12 +14,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="{{ site.description }}">
-  <meta name="keywords" content="animals, games, database, video games, anthropomorphic, zoomorphic">
+  <meta name="keywords" content="animals, games, database, video games, anthropomorphic, zoomorphic, animals in games">
   <meta name="author" content="{{ site.author_name }}">
   <meta name="twitter" content="{{ site.twitter_username }}">
   <meta name="github" content="{{ site.github_username }}">
 
-  <title>{{page.title}} {{ site.title }}</title>
+  <title>{{ page.title }} {{ site.title }}</title>
 
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet"> 
 
