Added the platformer genre

--- a/_includes/widget_archives.html
+++ b/_includes/widget_archives.html
@@ -54,7 +54,8 @@
             <option value="/genre/#action-adventure">action-adventure</a></option>
             <option value="/genre/#fighting">fighting</a></option>
             <option value="/genre/#mmo">mmo</a></option>
-            <option value="/genre/#mmorpg">mmorpg</a></option>            
+            <option value="/genre/#mmorpg">mmorpg</a></option>
+            <option value="/genre/#platformer">platformer</a></option>
             <option value="/genre/#rpg">rpg</a></option>
             <option value="/genre/#simulation">simulation</a></option>
             <option value="/genre/#social">social</a></option>
