Changed developer links

--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -32,7 +32,7 @@
 		
 		[<a href="/platform/#{{ tags }}" title="See all games on {{ tags }}."> {{ tags }} </a>] 
 
-		{% endfor %} <br>⬆️ Developer: <a href="/developer/#{{ post.developer }}" title="See all games from {{ post.developer }}.">{{ post.developer }}</a> <br>⬇️ Publisher(s): 
+		{% endfor %} <br>⬆️ Developer: <a href="https://www.google.com/search?q='{{ post.developer }}'" title="Learn more about {{ post.developer }}.">{{ post.developer }}</a> <br>⬇️ Publisher(s): 
 		{% for tags in post.publisher %}
 		
 		[ {{ tags }} ] 
