--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -1,5 +1,5 @@
 <div class="post">
-	<img src="{{ post.img }}" class="img-fluid" alt="{{ post.title }}" style="width: 100%; border-radius: 20px; border: 5px solid pink;">
+	<img src="/img/{{ post.img }}" class="img-fluid" alt="{{ post.title }}" style="width: 100%; border-radius: 20px; border: 5px solid pink;">
 	<br><br>
 	<h3>{{ post.title }} {% for tags in post.emoticon %}{{ tags }} {% endfor %}</h3>
 	<br>
