Added Lugaru series

--- a/_includes/widget_archives.html
+++ b/_includes/widget_archives.html
@@ -16,7 +16,8 @@
         <select onchange="location = this.value;">
             <option value=" ">Filter by series</option>
 
-            <option value="/series/#Animal Crossing">Animal Crossing</a></option>
+            <option value="/series/#Animal Crossing">Animal Crossing</a></option>            
+            <option value="/series/#Lugaru">Lugaru</a></option>
             <option value="/series/#Okami">Okami</a></option>
             <option value="/series/#Shelter">Shelter</a></option>
             
