--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,8 +55,9 @@
       $("a#creds").click(function(){
         $("div.modal2").addClass("show");
       });
-    });-->
-  </script>
+    });
+  </script>-->
+  
   <link href="/cssreset.css" rel="stylesheet">
   <link href="/index.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.png">
@@ -72,7 +73,7 @@
 
         <div class="menu">{% include mainmenu.html %}</div>
 
-        <form method="get" action="http://www.google.com/search" target="_blank">
+        <form method="get" action="https://www.google.com/search" target="_blank">
         <input type="hidden" name="sitesearch" value="agdb.smugcroc.com" />
         <input type="text" name="q" maxlength="255" placeholder="Search with Google" />
         </form>
@@ -95,5 +96,6 @@
     </div>
 
   <script src="/index.js"></script>
+
 </body>
 </html>
