--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -49,15 +49,15 @@
 		<a href="{{ post.link }}" target="_blank" title="Read more about {{ post.title }} on Wikipedia.org.">ℹ️ More information</a> 
 		<br><br>
 		🔗 <input type="text" value="https://agdb.smugcroc.com/#{{ post.title }}" id="myInput {{ post.title }}">
-		<button onclick="myFunction()" title="Copy link to {{ post.title }}.">Copy</button>
+		<!--<button onclick="myFunction()" title="Copy link to {{ post.title }}.">Copy</button>-->
 	</p>
 </div>
 
-<script>
+<!--<script>
 function myFunction() {
   var copyText = document.getElementById("myInput {{ post.title }}");
   copyText.select();
   document.execCommand("copy");
   alert("Copied the text: " + copyText.value);
 }
-</script>
+</script>-->
