--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -5,7 +5,7 @@
 	<br>
 	<p class="excerpt">
 
-		📅 Released: {{ post.date | date_to_long_string }}	<br>✨ Type: <a href="/type/#{{post.type}}" title="See all games with characters of this type.">{{ post.type }}</a> 
+		📅 Released: {{ post.date | date_to_long_string }}	<br>✨ Type: <a href="/type/#{{ post.type }}" title="See all games with characters of this type.">{{ post.type }}</a> 
 
 		<br>🦋 Species: 
 
@@ -29,7 +29,7 @@
 		<br>🎨 Art Style: {{ post.artstyle }} <br>💻 Platform(s):			
 		{% for tags in post.platform %}
 		
-		[<a href="/platform/#{{ tags }}" title="See all games on {{ tags }}."> {{ tags }} </a>] 
+		[<a href="/platform/#{{ tags | downcase | remove: ' ' }}" title="See all games on {{ tags }}."> {{ tags }} </a>] 
 
 		{% endfor %} <br>⬆️ Developer: <a href="https://www.google.com/search?q='{{ post.developer }}'" title="Learn more about {{ post.developer }}.">{{ post.developer }}</a> <br>⬇️ Publisher(s): 
 		{% for tags in post.publisher %}
@@ -38,7 +38,7 @@
 
 		{% endfor %} 
 
-		{% if post.series != nil %} <br>📚 Series: <a href="/series/#{{ post.series }}" title="See all games in the {{ post.series }} series.">{{ post.series }}</a>
+		{% if post.series != nil %} <br>📚 Series: <a href="/series/#{{ post.series | downcase | remove: ' ' }}" title="See all games in the {{ post.series }} series.">{{ post.series }}</a>
 		{% endif %} 
 		{% if post.suggester != nil %}
 		<br>❤️ Suggested by <a href="{{ post.suggesterurl }}" target="_blank" title="The awesome {{ post.suggester }} suggested this game!">{{ post.suggester }}</a>
@@ -48,7 +48,7 @@
 		📖 Summary: {{ post.excerpt }}<br><br>
 		<a href="{{ post.link }}" target="_blank" title="Read more about {{ post.title }} on Wikipedia.org.">ℹ️ More information</a> 
 		<br><br>
-		🔗 <input type="text" value="https://agdb.smugcroc.com/#{{ post.title }}" id="myInput {{ post.title }}">
+		🔗 <input type="text" value="https://agdb.smugcroc.com/#{{ post.title | downcase | remove: ' ' }}" id="myInput {{ post.title }}">
 		<!--<button onclick="myFunction()" title="Copy link to {{ post.title }}.">Copy</button>-->
 	</p>
 </div>
