--- a/_includes/widget_archives.html
+++ b/_includes/widget_archives.html
@@ -16,10 +16,10 @@
         <select onchange="location = this.value;">
             <option value=" ">Filter by series</option>
 
-            <option value="/series/#Animal Crossing">Animal Crossing</a></option>            
-            <option value="/series/#Lugaru">Lugaru</a></option>
-            <option value="/series/#Okami">Okami</a></option>
-            <option value="/series/#Shelter">Shelter</a></option>
+            <option value="/series/#animalcrossing">Animal Crossing</a></option>            
+            <option value="/series/#lugaru">Lugaru</a></option>
+            <option value="/series/#okami">Okami</a></option>
+            <option value="/series/#shelter">Shelter</a></option>
             
         </select>
 <br><br>
@@ -66,25 +66,25 @@
         <select onchange="location = this.value;">
             <option value=" ">Filter by platform</option>
 
-            <option value="/platform/#Android">Android</a></option>
-            <option value="/platform/#GameCube">GameCube</a></option>
-            <option value="/platform/#iOS">iOS</a></option>
-            <option value="/platform/#iQue Player">iQue Player</a></option>
-            <option value="/platform/#Linux">Linux</a></option>
-            <option value="/platform/#macOS">macOS</a></option>   
-            <option value="/platform/#Nintendo 3DS">Nintendo 3DS</a></option>
-            <option value="/platform/#Nintendo 64">Nintendo 64</a></option>
-            <option value="/platform/#Nintendo DS">Nintendo DS</a></option>
-            <option value="/platform/#Nintendo Switch">Nintendo Switch</a></option>
-            <option value="/platform/#PlayStation 1">PlayStation 1</a></option>
-            <option value="/platform/#PlayStation 2">PlayStation 2</a></option>
-            <option value="/platform/#PlayStation 3">PlayStation 3</a></option>
-            <option value="/platform/#PlayStation 4">PlayStation 4</a></option>
-            <option value="/platform/#Wii">Wii</a></option>
-            <option value="/platform/#Wii U">Wii U</a></option>
-            <option value="/platform/#Windows">Windows</a></option>
-            <option value="/platform/#Xbox">Xbox</a></option>
-            <option value="/platform/#Xbox 360">Xbox 360</a></option>
-            <option value="/platform/#Xbox One">Xbox One</a></option>
+            <option value="/platform/#android">Android</a></option>
+            <option value="/platform/#gamecube">GameCube</a></option>
+            <option value="/platform/#ios">iOS</a></option>
+            <option value="/platform/#iqueplayer">iQue Player</a></option>
+            <option value="/platform/#linux">Linux</a></option>
+            <option value="/platform/#macos">macOS</a></option>   
+            <option value="/platform/#nintendo3ds">Nintendo 3DS</a></option>
+            <option value="/platform/#nintendo64">Nintendo 64</a></option>
+            <option value="/platform/#nintendods">Nintendo DS</a></option>
+            <option value="/platform/#nintendoswitch">Nintendo Switch</a></option>
+            <option value="/platform/#playstation1">PlayStation 1</a></option>
+            <option value="/platform/#playstation2">PlayStation 2</a></option>
+            <option value="/platform/#playstation3">PlayStation 3</a></option>
+            <option value="/platform/#playstation4">PlayStation 4</a></option>
+            <option value="/platform/#wii">Wii</a></option>
+            <option value="/platform/#wiiu">Wii U</a></option>
+            <option value="/platform/#windows">Windows</a></option>
+            <option value="/platform/#xbox">Xbox</a></option>
+            <option value="/platform/#xbox360">Xbox 360</a></option>
+            <option value="/platform/#xboxone">Xbox One</a></option>
             
         </select>
