--- a/_includes/widget_archives.html
+++ b/_includes/widget_archives.html
@@ -58,6 +58,7 @@
             <option value="/genre/#mmorpg">mmorpg</a></option>
             <option value="/genre/#platformer">platformer</a></option>
             <option value="/genre/#rpg">rpg</a></option>
+            <option value="/genre/#sandbox">sandbox</a></option>
             <option value="/genre/#simulation">simulation</a></option>
             <option value="/genre/#social">social</a></option>
             
