Added some genres

--- a/_includes/widget_archives.html
+++ b/_includes/widget_archives.html
@@ -56,7 +56,9 @@
             <option value="/genre/#fighting">fighting</a></option>
             <option value="/genre/#mmo">mmo</a></option>
             <option value="/genre/#mmorpg">mmorpg</a></option>
+            <option value="/genre/#party">party</a></option>
             <option value="/genre/#platformer">platformer</a></option>
+            <option value="/genre/#puzzle">puzzle</a></option>
             <option value="/genre/#rpg">rpg</a></option>
             <option value="/genre/#sandbox">sandbox</a></option>
             <option value="/genre/#simulation">simulation</a></option>
