--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -31,7 +31,17 @@
 		
 		[<a href="/platform/#{{ tags | downcase | remove: ' ' }}" title="See all games on {{ tags }}."> {{ tags }} </a>] 
 
-		{% endfor %} <br>⬆️ Developer: <a href="https://www.google.com/search?q='{{ post.developer }}'" target="_blank" title="Learn more about {{ post.developer }}.">{{ post.developer }}</a> <br>⬇️ Publisher(s): 
+		{% endfor %} 
+
+		<br>⬆️ Developer: 
+
+		{% for tags in post.developer %}
+
+		[ <a href="https://www.google.com/search?q='{{ tags }}'" target="_blank" title="Learn more about {{ tags }}.">{{ tags }}</a> ]  
+
+		{% endfor %}
+
+		<br>⬇️ Publisher(s): 
 		{% for tags in post.publisher %}
 		
 		[ {{ tags }} ] 
