--- a/index.css
+++ b/index.css
@@ -75,11 +75,9 @@ div#content p {
 }
 
 div#navigation {
-	width: 30%;
-	height: 100vh;
-	padding: 50px;
+	width: 100%;
+	padding: 20px 0px 0px 0px;
 	float: left;
-  position: fixed;
   background-color: white;
   border: 5px solid pink;
 }
@@ -111,14 +109,18 @@ div.menu {
 }
 
 div#content {
-	width: 70%;
-	padding: 50px;
+	width: 100%;
+  padding: 20px 0px 0px 0px;
 	float: right;
   border: 5px solid white;
 }
 
 div#content h1, div.title h1 {
   margin-bottom: 80px;
+}
+
+div.title h1 {
+  margin-bottom: 50px;
 }
 
 div.post, div.archives {
@@ -132,7 +134,26 @@ div.post, div.archives {
 }
 
 div.post {
+  margin-left: 0px;
+  margin-right: 0px;
+  padding: 10px;
+}
+
+div.post {
   border: 5px solid pink;
+}
+
+div.post div.postimg {
+  margin: 0 auto;
+  padding: 0 auto;
+  width: 100%;
+}
+
+div.post img {
+  width: 100%;
+  border-radius: 20px; 
+  border: 5px solid pink;
+  
 }
 
 div#content div.post p.excerpt, div#content div.post h3 {
@@ -140,7 +161,7 @@ div#content div.post p.excerpt, div#content div.post h3 {
 }
 
 div.post input {
-  width: 80%;
+  width: 85%;
   font-size: 12pt;
   font-family: sans-serif;
   color: #110b54;
@@ -264,6 +285,41 @@ form input {
 
 @media (min-width: 768px) {	
 
+div#content h1, div.title h1 {
+  margin-bottom: 80px;
+}
 
+div.post {
+  padding: 30px;
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-bottom: 100px;
+  border-radius: 20px;
+  background-color: white;
+  background-position: center;
+}
+
+div.post div.postimg {
+  margin: 0 auto;
+  padding: 0 auto;
+  width: 80%;
+}
+
+div#navigation {
+  width: 30%;
+  height: 100vh;
+  padding: 50px;
+  float: left;
+  position: fixed;
+  background-color: white;
+  border: 5px solid pink;
+}
+
+div#content {
+  width: 70%;
+  padding: 50px;
+  float: right;
+  border: 5px solid white;
+}
 
 }
