--- a/_includes/widget_archives.html
+++ b/_includes/widget_archives.html
@@ -32,6 +32,7 @@
             <option value="/species/#dog">dog</a></option>
             <option value="/species/#fox">fox</a></option>
             <option value="/species/#multiple">multiple</a></option>
+            <option value="/species/#other">other</a></option>
             <option value="/species/#rabbit">rabbit</a></option>
             <option value="/species/#reptile">reptile</a></option>
             <option value="/species/#rodent">rodent</a></option>
