--- a/_includes/widget_archives.html
+++ b/_includes/widget_archives.html
@@ -64,6 +64,7 @@
             <option value="/genre/#sandbox">sandbox</a></option>
             <option value="/genre/#simulation">simulation</a></option>
             <option value="/genre/#social">social</a></option>
+            <option value="/genre/#survival">survival</a></option>
             
         </select>
 <br><br>
