--- a/_includes/widget_archives.html
+++ b/_includes/widget_archives.html
@@ -26,6 +26,7 @@
         <select onchange="location = this.value;">
             <option value=" ">Filter by species</option>
 
+            <option value="/species/#bigcat">big cat</a></option>
             <option value="/species/#bird">bird</a></option>
             <option value="/species/#cat">cat</a></option>
             <option value="/species/#deer">deer</a></option>
