--- a/_includes/widget_archives.html
+++ b/_includes/widget_archives.html
@@ -56,6 +56,7 @@
             <option value="/genre/#action">action</a></option>
             <option value="/genre/#action-adventure">action-adventure</a></option>
             <option value="/genre/#fighting">fighting</a></option>
+            <option value="/genre/#fps">fps</a></option>
             <option value="/genre/#mmo">mmo</a></option>
             <option value="/genre/#mmorpg">mmorpg</a></option>
             <option value="/genre/#party">party</a></option>
@@ -66,6 +67,7 @@
             <option value="/genre/#simulation">simulation</a></option>
             <option value="/genre/#social">social</a></option>
             <option value="/genre/#survival">survival</a></option>
+            <option value="/genre/#tps">tps</a></option>
             
         </select>
 <br><br>
