--- a/_includes/widget_archives.html
+++ b/_includes/widget_archives.html
@@ -20,6 +20,7 @@
             <option value="/series/#lugaru">Lugaru</a></option>
             <option value="/series/#okami">Okami</a></option>
             <option value="/series/#shelter">Shelter</a></option>
+            <option value="/series/#theelderscrolls">The Elder Scrolls</a></option>
             
         </select>
 <br><br>
