--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -5,7 +5,15 @@
 
 	<p class="excerpt">
 
-		📅 Released: {{ post.date | date_to_long_string }}	<br>✨ Type: <a href="/type/#{{ post.type }}" title="See all games with characters of this type.">{{ post.type }}</a> 
+		📅 Initial Release: {{ post.date | date_to_long_string }}	<br>
+
+		{% if post.latestdate != nil %}
+
+		🆕 Latest Release: {{ post.latestdate | date_to_long_string }}	<br>
+
+		{% endif %}
+
+		✨ Type: <a href="/type/#{{ post.type }}" title="See all games with characters of this type.">{{ post.type }}</a> 
 
 		<br>🦋 Species: 
 
@@ -48,8 +56,14 @@
 
 		{% endfor %} 
 
-		{% if post.series != nil %} <br>📚 Series: <a href="/series/#{{ post.series | downcase | remove: ' ' }}" title="See all games in the {{ post.series }} series.">{{ post.series }}</a>
+		{% if post.series != nil %} <br>📚 Games in Series: 
+
+		{% for tags in post.series %}
+		[ <a href="https://www.google.com/search?q='{{ tags }}'" target="_blank" title="Find {{ tags }}.">{{ tags }}</a>] 
+		{% endfor %}
+
 		{% endif %} 
+
 		{% if post.suggester != nil %}
 		<br>❤️ Suggested by <a href="{{ post.suggesterurl }}" target="_blank" title="The awesome {{ post.suggester }} suggested this game!">{{ post.suggester }}</a>
 		{% endif %}
