--- a/_includes/widget_archives.html
+++ b/_includes/widget_archives.html
@@ -50,6 +50,7 @@
             <option value=" ">Filter by platform</option>
 
             <option value="/platform/#android">Android</a></option>
+            <option value="/platform/#dreamcast">Dreamcast</a></option>
             <option value="/platform/#gamecube">GameCube</a></option>
             <option value="/platform/#ios">iOS</a></option>
             <option value="/platform/#iqueplayer">iQue Player</a></option>
