--- a/_includes/credits.html
+++ b/_includes/credits.html
@@ -2,7 +2,7 @@
 	<p style="text-align:center;">©	<script>
 			var year = new Date();
 			document.write(year.getFullYear());
-		</script> <a href="http://lizlorena.com" target="_blank">LizLorena.com</a>. <br>There are currently <strong>{{ site.posts | size }} entries</strong> in this database. Last update: {{ site.time | date: "%-d %B %Y" }}.
+		</script> <a href="https://cozymaus.com" target="_blank">CozyMaus</a>. <br>There are currently <strong>{{ site.posts | size }} entries</strong> in this database. Last update: {{ site.time | date: "%-d %B %Y" }}.
 
 		 <!--<a id="creds">Credits</a>.-->
 	</p>
