--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -1,5 +1,5 @@
 <div class="post">
-	<div class="postimg"><img src="https://lizlorena.com/img/animal-games-database/{{ post.img }}" class="img-fluid" alt="{{ post.title }}"></div>
+	<div class="postimg"><img src="https://cozymaus.github.io/img/animal-games-database/{{ post.img }}" class="img-fluid" alt="{{ post.title }}"></div>
 	<br><br>
 	<h3>{{ post.title }} {% for tags in post.emoticon %}{{ tags }} {% endfor %}</h3>
 
