--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -21,9 +21,7 @@
 		[<a href="/species/#{{ tags | downcase | remove: ' ' }}" title="See all games with this animal species."> {{ tags }} </a>] 
 		{% endfor %}
 
-		<br>🎮 Play as animal? {{ post.playable }} <br>🔧 Has mods? {{ post.mods }} <br>
-
-
+		<br>🎮 Play as animal? {{ post.playable }} <br>
 
 		📝 Genre(s): 
 
@@ -34,7 +32,7 @@
 		{% endfor %}
 
 
-		<br>🎨 Art Style: {{ post.artstyle }} <br>💻 Platform(s):			
+		<br>💻 Platform(s):			
 		{% for tags in post.platform %}
 		
 		[<a href="/platform/#{{ tags | downcase | remove: ' ' }}" title="See all games on {{ tags }}."> {{ tags }} </a>] 
@@ -56,7 +54,7 @@
 
 		{% endfor %} 
 
-		{% if post.series != nil %} <br>📚 Games in Series: 
+		{% if post.series != nil %} <br>📚 Franchise: 
 
 		{% for tags in post.series %}
 		[ <a href="https://www.google.com/search?q='{{ tags }}'" target="_blank" title="Find {{ tags }}.">{{ tags }}</a> ] 
