--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,12 +70,12 @@
 
       <div id="navigation">
 
-        <div class="title"><h1>🐾 Kemono Database (wip)</h1></div>
+        <div class="title"><h1>🐾 Kemono DB</h1></div>
 
         <div class="menu">{% include mainmenu.html %}</div>
 
         <form method="get" action="https://www.google.com/search" target="_blank">
-        <input type="hidden" name="sitesearch" value="agdb.lizlorena.com" />
+        <input type="hidden" name="sitesearch" value="kemono.cozymaus.com" />
         <input type="text" name="q" maxlength="255" placeholder="Search with Google" />
         </form>
 
