--- a/_includes/widget_archives.html
+++ b/_includes/widget_archives.html
@@ -19,9 +19,8 @@
         <select onchange="location = this.value;">
             <option value=" ">Filter by type</option>
 
-            <option value="/type/#anthropomorphic">anthropomorphic</a></option>
-            <option value="/type/#realistic">realistic</a></option>
-            <option value="/type/#zoomorphic">zoomorphic</a></option>
+            <option value="/type/#kemono">kemono</a></option>
+            <option value="/type/#kemonomimi">kemonomimi</a></option>
 
         </select>
 <br><br>
