--- a/_includes/widget_archives.html
+++ b/_includes/widget_archives.html
@@ -1,4 +1,14 @@
-        <select onchange="location = this.value;">
+<select onchange="location = this.value;">
+            <option value=" ">Filter by media type</option>
+
+            <option value="/games">games</a></option>
+            <option value="/anime">anime</a></option>
+            <option value="/manga">manga</a></option>
+
+        </select>
+<br><br>
+
+<select onchange="location = this.value;">
             <option value=" ">Filter by species</option>
 
             <option value="/species/#bigcat">big cat</a></option>
@@ -17,7 +27,7 @@
         </select>
 <br><br>
         <select onchange="location = this.value;">
-            <option value=" ">Filter by type</option>
+            <option value=" ">Filter by character type</option>
 
             <option value="/type/#kemono">kemono</a></option>
             <option value="/type/#kemonomimi">kemonomimi</a></option>
