--- a/_includes/widget_archives.html
+++ b/_includes/widget_archives.html
@@ -32,7 +32,6 @@
             <option value="/genre/#fighting">fighting</a></option>
             <option value="/genre/#fps">fps</a></option>
             <option value="/genre/#mmo">mmo</a></option>
-            <option value="/genre/#mmorpg">mmorpg</a></option>
             <option value="/genre/#party">party</a></option>
             <option value="/genre/#platformer">platformer</a></option>
             <option value="/genre/#puzzle">puzzle</a></option>
@@ -42,6 +41,7 @@
             <option value="/genre/#social">social</a></option>
             <option value="/genre/#survival">survival</a></option>
             <option value="/genre/#tps">tps</a></option>
+            <option value="/genre/#visual-novel">visual novel</a></option>
             
         </select>
 <br><br>
