--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="{{ site.description }}">
-  <meta name="keywords" content="animals, games, database, video games, anthropomorphic, zoomorphic, animals in games">
+  <meta name="keywords" content="dragons, games, database, video games, anthropomorphic, dragons in games">
   <meta name="author" content="{{ site.author_name }}">
   <meta name="twitter" content="{{ site.twitter_username }}">
   <meta name="github" content="{{ site.github_username }}">
@@ -70,12 +70,12 @@
 
       <div id="navigation">
 
-        <div class="title"><h1>🐾 Kemono DB</h1></div>
+        <div class="title"><h1>🐾 Dragon DB</h1></div>
 
         <div class="menu">{% include mainmenu.html %}</div>
 
         <form method="get" action="https://www.google.com/search" target="_blank">
-        <input type="hidden" name="sitesearch" value="kemono.cozymaus.com" />
+        <input type="hidden" name="sitesearch" value="gems.cozymaus.com" />
         <input type="text" name="q" maxlength="255" placeholder="Search with Google" />
         </form>
 
