--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -13,7 +13,7 @@
 
 		{% endif %}
 
-		🦋 Type: <a href="/type/#{{ post.type }}" title="See all games with characters of this type.">{{ post.type }}</a> 
+		🦋 Type: <a href="/type/#{{ post.type }}" title="See all games with characters of this type.">{{ post.type }}</a> <br>
 
 		📝 Genre(s): 
 
