--- a/_includes/widget_archives.html
+++ b/_includes/widget_archives.html
@@ -1,26 +1,13 @@
-<select onchange="location = this.value;">
-            <option value=" ">Filter by species</option>
-
-            <option value="/species/#bigcat">big cat</a></option>
-            <option value="/species/#bird">bird</a></option>
-            <option value="/species/#cat">cat</a></option>
-            <option value="/species/#deer">deer</a></option>
-            <option value="/species/#dog">dog</a></option>
-            <option value="/species/#fox">fox</a></option>
-            <option value="/species/#multiple">multiple</a></option>
-            <option value="/species/#other">other</a></option>
-            <option value="/species/#rabbit">rabbit</a></option>
-            <option value="/species/#reptile">reptile</a></option>
-            <option value="/species/#rodent">rodent</a></option>
-            <option value="/species/#wolf">wolf</a></option>
-
-        </select>
-<br><br>
         <select onchange="location = this.value;">
-            <option value=" ">Filter by character type</option>
+            <option value=" ">Filter by dragon type</option>
 
-            <option value="/type/#kemono">kemono</a></option>
-            <option value="/type/#kemonomimi">kemonomimi</a></option>
+            <option value="/type/#dragon">dragon</a></option>
+            <option value="/type/#wyvern">wyvern</a></option>
+            <option value="/type/#amphithere">amphithere</a></option>
+            <option value="/type/#wyrm">wyrm</a></option>
+            <option value="/type/#lindwurm">lindwurm</a></option>
+            <option value="/type/#lung-dragon">lung-dragon</a></option>
+            <option value="/type/#drake">drake</a></option>
 
         </select>
 <br><br>
