--- a/_includes/widget_archives.html
+++ b/_includes/widget_archives.html
@@ -6,7 +6,7 @@
             <option value="/type/#amphithere">amphithere</a></option>
             <option value="/type/#wyrm">wyrm</a></option>
             <option value="/type/#lindwurm">lindwurm</a></option>
-            <option value="/type/#lung-dragon">lung-dragon</a></option>
+            <option value="/type/#lung-dragon">lung dragon</a></option>
             <option value="/type/#drake">drake</a></option>
 
         </select>
