--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -5,21 +5,25 @@
 
 	<p class="excerpt">
 
-		📅 Release Date: {{ post.date | date_to_long_string }}	<br>
+		📅 Release date: {{ post.date | date_to_long_string }}	<br>
 
-		🦋 Type: <a href="/type/#{{ post.type }}" title="See all games with characters of this type.">{{ post.type }}</a> <br>
+		🦋 Type of dragon: 
+		{% for tags in post.genre %}
 
-		📝 Genre(s): 
+		[ <a href="/type/#{{ tags }}" title="See all games with dragons of this type.">{{ tags }}</a> ]  
 
+		{% endfor %}
+		
+		<br>📝 Genre: 
 		{% for tags in post.genre %}
 
 		[ <a href="/genre/#{{ tags }}" title="See all {{ tags }} games.">{{ tags }}</a> ]  
 
 		{% endfor %}
 		
-		<br>🎨 Art Style: {{ post.artstyle }} <br>
+		<br>🎨 Art style: {{ post.artstyle }} <br>
 
-		💻 Platform(s):			
+		💻 Platform:			
 		{% for tags in post.platform %}
 		
 		[<a href="/platform/#{{ tags | downcase | remove: ' ' }}" title="See all games on {{ tags }}."> {{ tags }} </a>] 
@@ -34,7 +38,7 @@
 
 		{% endfor %}
 
-		<br>⬇️ Publisher(s): 
+		<br>⬇️ Publisher: 
 		{% for tags in post.publisher %}
 		
 		[ {{ tags }} ] 
