--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -5,9 +5,9 @@
 
 	<p class="excerpt">
 
-		📅 Release date: {{ post.date | date_to_long_string }}	<br>
+		📅 Released {{ post.date | date_to_long_string }}	<br>
 
-		🦋 Type of dragon: 
+		🦋 Type of dragon featured: 
 		{% for tags in post.type %}
 
 		[ <a href="/type/#{{ tags }}" title="See all games with dragons of this type.">{{ tags }}</a> ]  
@@ -58,7 +58,7 @@
 		{% endif %}
 		<br><br>
 		
-		📖 Summary: {{ post.excerpt }}<br><br>
+		📖 {{ post.excerpt }}<br><br>
 		<a href="{{ post.link }}" target="_blank" title="Read more about {{ post.title }} on Wikipedia.org.">ℹ️ More information</a> </p>
 		
 		🔗 <input type="text" value="{{ site.url }}/#{{ post.title | downcase | remove: ' ' }}" id="myInput {{ post.title }}">
