--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -7,7 +7,7 @@
 
 		📅 Released {{ post.date | date_to_long_string }}	<br>
 
-		🦋 Type of dragon featured: 
+		🦋 Type of dragon: 
 		{% for tags in post.type %}
 
 		[&nbsp;<a href="/type/#{{ tags }}" title="See all games with dragons of this type.">{{ tags }}</a>&nbsp;]  
