--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
 
       <div id="navigation">
 
-        <div class="title"><h1>💎 Dragon Database</h1></div>
+        <div class="title"><h1>💎&nbsp;Dragon&nbsp;Database</h1></div>
 
         <div class="menu">{% include mainmenu.html %}</div>
 
