--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
   
   <link href="/cssreset.css" rel="stylesheet">
   <link href="/index.css" rel="stylesheet">
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon.png">
+  <link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon }}">
 
 </head>
 <body>
