--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,7 +75,7 @@
         <div class="menu">{% include mainmenu.html %}</div>
 
         <form method="get" action="https://www.google.com/search" target="_blank">
-        <input type="hidden" name="sitesearch" value="gems.cozymaus.com" />
+        <input type="hidden" name="sitesearch" value="dragons.cozymaus.com" />
         <input type="text" name="q" maxlength="255" placeholder="Search with Google" />
         </form>
 
