--- a/index.css
+++ b/index.css
@@ -73,14 +73,6 @@ div#content p {
   color: white;
 }
 
-div#navigation {
-	width: 100%;
-	padding: 20px 0px 0px 0px;
-	float: left;
-  background-color: white;
-  border: 5px solid pink;
-}
-
 div#navigation div.menu ul li a {
   font-size: 15pt;
 	float: left;
@@ -107,37 +99,8 @@ div.menu {
   width: 100%;
 }
 
-div#content {
-	width: 100%;
-  padding: 20px 0px 0px 0px;
-	float: right;
-  border: 5px solid white;
-}
-
-div#content h1, div.title h1 {
-  margin-bottom: 80px;
-}
-
 div.title h1 {
   margin-bottom: 50px;
-}
-
-div.post, div.archives {
-	padding: 30px;
-	margin-left: 100px;
-  margin-right: 100px;
-  background-color: white;
-  background-position: center;
-}
-
-div.post {
-  margin-left: 0px;
-  margin-right: 0px;
-  padding: 10px;
-}
-
-div.post {
-  border: 5px solid pink;
 }
 
 div.post div.postimg {
@@ -279,7 +242,6 @@ form input {
 
 /*Desktop*/
 
-@media (min-width: 768px) {	
 
 div#content h1, div.title h1 {
   margin-bottom: 80px;
@@ -292,6 +254,15 @@ div.post {
   margin-bottom: 100px;
   background-color: white;
   background-position: center;
+  border: 5px solid pink;
+}
+
+div.archives {
+padding: 30px;
+margin-left: 100px;
+margin-right: 100px;
+background-color: white;
+background-position: center;
 }
 
 div.post div.postimg {
@@ -301,28 +272,41 @@ div.post div.postimg {
 }
 
 div#navigation {
-  width: 30%;
+  width: 50%;
   height: 100vh;
   padding: 50px;
   float: left;
   position: fixed;
   background-color: white;
   border: 5px solid pink;
+  padding: 20px 0px 0px 0px;
 }
 
 div#content {
-  width: 70%;
+  width: 50%;
   padding: 50px;
   float: right;
   border: 5px solid white;
-}
-
 }
 
 /*mobile*/
 
 @media (max-width: 600px) {
 
+
+div.post {
+  margin-left: 0px;
+  margin-right: 0px;
+  padding: 10px;
+}
 	
+div#content {
+width: 100%;
+padding: 20px 0px 0px 0px;
+}
+
+div#navigation {
+width: 100%;
+}
 
 }
