--- a/index.css
+++ b/index.css
@@ -261,7 +261,7 @@ div.archives {
 padding: 30px;
 margin-left: 100px;
 margin-right: 100px;
-background-color: white;
+background-color: pink;
 background-position: center;
 }
 
