--- a/index.css
+++ b/index.css
@@ -1,306 +1,427 @@
+/*Fonts*/
 ::-moz-selection { /* Code for Firefox */
-  color: white;
-  background: pink;
+	color: white;
+	background: #F58EA8;
 }
-
 ::selection {
-  color: white;
-  background: pink;
+	color: white;
+	background: #F58EA8;
 }
 
-/*Mobile*/
-body {  
-  background-color: #110b54;
-  background-position: top;
+div.container-fluid {
+	padding-right: 20px;
+	padding-left: 20px;
 }
 
+table {
+	border: 1px solid gray;
+	margin-top: 20px;
+}
+th, td {
+	padding: 10px;
+	border-bottom: 1px solid gray;
+	border-right: 1px solid gray;
+}
+th {
+	background-color: #fafafa;
+}
+blockquote {
+	margin: 50px;
+	padding: 5% 10% 10% 10%;
+	background-color: #fafafa;
+	border-radius: 50px;
+	font-style: italic;
+	color: black;
+	text-indent: -30px;
+}
+blockquote::before {
+	content: '❝';
+	font-size: 300%;
+	font-family: 'Playfair Display', serif;
+	color: lightgray;
+}
 em {
-  font-style: italic;
+	font-style: italic;
 }
-
 strong {
-  font-weight: bold;
+	font-weight: bold;
+}
+div#top-menu-left, div#menu {
+	font-size: 15pt;
+}
+h1, h2, h3, h4, h5, h6 {
+
+}
+p, table td, ul li, h3, h2, h1, select, a {
+	font-family: Arial, sans-serif;
 }
 
-div#content a, div#navigation a {
-  color: green;
-  transition: all .5s;
-}
-
-div#content a:hover, div#navigation a:hover {
+a:link {
   text-decoration: none;
-  color: darkgreen;
 }
 
-h1, h2, h3 {
-  color: white;
+a:visited {
+  text-decoration: none;
 }
 
-div.post h3 {
-  color: #110b54;
-  font-family: sans-serif;
+a:hover {
+  text-decoration: none;
 }
 
-h1 {
-  font-size: 22pt;
+a:active {
+  text-decoration: none;
 }
 
-h2 {
-  font-size: 20pt;
-  margin-bottom: 50px;
+/*Content*/
+
+div.container-fluid {
+	width: 100%;
+	margin: 0 auto;
+}
+
+div#mainarea {
+	width:70%;
+	margin: 0 auto;
+	float: left;
+	border: 5px solid black;
+	border-top: 10px solid black;
+	border-left: 10px solid #F58EA8;
+	background-color: white;
+}
+
+body {
+	background-color: whitesmoke;
+}
+
+div#content {
+	width: 100%;
+	margin: 0 auto;
+	padding: 20px;
+	background-color: white;
+}
+
+div#sidebar {
+	width: 30%;
+	margin: 0 auto;
+	float: left;
+	/*border: 5px solid black;
+	border-left: none;*/
+	height: 100%;
+	/*padding: 20px;*/
+}
+
+div#sidebar div.widget {
+	padding: 20px;
+	border: 5px solid black;
+	border-top: 10px solid black;
+	border-left: 10px solid #F58EA8;
+	margin-bottom: 20px;
+	margin-left: 20px;
+	background-color: white;
+}
+
+/*Pagination*/
+div.pagination {
+	width: 100%;
+	float: left;
+}
+div.pagination a.prev, div.pagination a.next {
+	width: 100%;
+	border: 1px solid #08aca2;
+	padding: 10px;
+	color: #08aca2;
+	background-color: rgba(255,255,255,0.5);		
+}
+div.pagination a.prev:hover, div.pagination a.next:hover {
+	border-color: #08aca2;
+}
+div.pagination a.prev:active, div.pagination a.next:active {
+	background-color: #08aca2;
+	border-color: #08aca2;
+	color: white;
+	outline: rgb(0,0,0,0);
+}
+img.home-img {
+	/*border-radius: 50%;*/
+	width: 100%; 
+	float: none; 
+	display: block; 
+	margin-right: 0px;
+	margin-bottom: 30px;
+}
+iframe.video {
+	margin-top: 30px;
+	margin-bottom: 30px;
+	height: 100%;
+	width: 100%;
+}
+
+iframe.pdf {
+	margin-top: 20px;
+	height: 500px;
+	width: 100%;
+}
+
+img.home-img.larger {
+	border-radius: 0px;
+}
+
+p a, a h1, td a, li a, h2 a, h3 a, h4 a {
+	color: #F58EA8;
+	transition: .1s all;
+}
+
+p a:hover, a h1:hover, td a:hover, li a:hover, h2 a:hover, h3 a:hover, h4 a:hover {
+	color: #F58EA8;
+	text-decoration: underline;
+}
+
+h1 a {
+	color:black;
+	transition: .1s all;
+}
+
+h1 a:hover{
+	color: #F58EA8;
+	cursor:pointer;
 }
 
 h3 {
-  font-size: 15pt;
-  line-height: 25px;
+	font-size: 15pt;
 }
 
-div.title h1 {
-  color: #110b54;
-  font-size: 22pt;
+div#posts {
+	float: left;
+}
+
+div.post {
+	margin: 0 auto;
+	width: 100%;
+	float: left;
+}
+
+div.post a {
+	padding: 20px;
+	border-radius: 30px;
+	color: #F58EA8;
+	margin: 0 0 20px 0;
+	display: inline-block;
+	transition: all 0.1s;
+	text-decoration: none !important;
+	float: left;
+	font-size: 13pt;
+	line-height: 135%;
+	background-color: #fff5f7;/*#ffe8ed*/
+	border: 2px solid #F58EA8;
+}
+
+div.post a:hover {
+	background-color: #F58EA8;
+	color: white;
+	text-decoration: none !important;
+}
+
+div.post div.category {
+	float: right;
+}
+
+div.post a.link, div.post a.calendar {
+	width: 90%;
+}
+
+div.post a.link span.excerpt {
+	color: black;
+	font-size: 13pt;
+	transition: .1s all;
+}
+
+div.post a.link:hover span.excerpt {
+	color: white;
+} 
+
+div.post a.category {
+	border-radius: 100%;
+	margin-right: 20px;
+}
+
+/**p a:hover, p a:active, p a:focus, a h1:hover, a h1:active, a h1:focus {
+	color: #08aca2;
+}**/
+
+div#content table td {
+	padding-left: 0px;
+	padding-bottom: 0px;
+	padding-right: 0px;
+	border: white;
+}
+
+div#content table td:nth-child(1) {
+	width: 200px;
+}
+
+div#content table {
+	border: white;
+}
+
+p, h1, h2, h3, h4, h5, h6, li {
+	color: black;
+}
+
+p, li, table, select, div {
+	font-size: 13pt;
 }
 
 p {
-  font-size: 12pt;
-  font-family: sans-serif;
-  line-height: 25px;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  color: #110b54;
+	/*line-height:135%;*/
 }
 
-div#content p {
-  color: white;
+div#title {
+	width:100%;
+	padding: 0;
+	margin:0;
+	/*border-bottom: 5px solid black;*/
+	padding-bottom: 20px;
 }
 
-div#navigation div.menu ul li a {
-  font-size: 15pt;
-	float: left;
-  width: 33.33%;
-  padding: 14px;
-  text-align: center;
-  background-color: #110b54; 
-  font-family: sans-serif;
-  color: white;
-  border-bottom: 5px solid white;
-  transition: all .5s;
+div#title h1  {
+	font-size:94pt;
+	text-align:center;
 }
 
-div#navigation div.menu ul li a:hover {
-  text-decoration: none;
-  color: #110b54;
-  background-color: white;
+div#title h2 {
+	font-size:15pt;
+	text-align:center;	
 }
 
-div.menu {
-  /*margin-bottom: 30px;
-  margin-top: 30px;*/
-  height: 40px;  
-  width: 100%;
+div#content h2 {
+	font-size:18pt;
+	margin-bottom: 20px;
 }
 
-div.title h1 {
-  margin-bottom: 50px;
-}
+/*Tooltips*/
+	#s-m-t-tooltip {
+		background-color: white;
+		border: 2px solid #F58EA8;
+		color: #F58EA8;
+		padding: 10px;
+		font-family: Arial, sans-serif;
+		letter-spacing: 1px;
+		font-weight: normal;
+		font-size: 12pt !important;
+		margin-top: 15px;
+		z-index: 3;
+		text-transform: uppercase;
+	}
 
-div.post div.postimg {
-  margin: 0 auto;
-  padding: 0 auto;
-  width: 100%;
-}
+	img.logo {
+		border-radius: 100%; 
+		width:30%; 
+		margin-bottom:20px;
+	}
 
-div.post img {
-  width: 100%;
-  border: 5px solid pink;
-  
-}
 
-div#content div.post p.excerpt, div#content div.post h3 {
-  margin-bottom: 30px;
-}
-
-div.post input {
-  width: 85%;
-  font-size: 12pt;
-  font-family: sans-serif;
-  color: #110b54;
-  border: none;
-}
-
-div.post button {
-  font-size: 15pt;
-  width: 100px;
-  padding: 10px;
-  text-align: center;
-  background-color: #110b54; 
-  font-family: sans-serif;
-  border: none;
-  color: white;
-  transition: all .5s;
-}
-
-div.post button:hover {
-  border: none;
-  text-decoration: none;
-  color: #110b54;
-  background-color: white;
-}
-
-div.title {
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-bottom: 0px;
-  padding: 0px;
-}
-
-div#content div.post p {
-  color: #110b54;
-  margin-bottom: 0px;
-  margin-top: 0px;
-}
-
-/*Select*/
-select {
-  width: 100%;
-  color: #110b54;
-  border: white;
-  padding: 5px;
-  font-size: 12pt;
-  font-family: sans-serif;
-}
-
-select option {
-  color: #110b54;
-  font-size: 12pt;
-  font-family: sans-serif;
-}
-
-/*Modal Box*/
-div.modal2 {
-   display: none; /* Hidden by default */
-   position: fixed; /* Stay in place */
-   z-index: 3; /* Sit on top */
-   left: 0;
-   top: 0;
-   width: 100%; /* Full width */
-   height: 100%; /* Full height */
-   overflow: auto; /* Enable scroll if needed */
-   background-color: rgb(0,0,0); /* Fallback color */
-   background-color: rgba(0,0,0,0.4); /* #110b54 w/ opacity */
- }
-
-div.login2 {
-  background-color: whitesmoke;
-  box-shadow: 0px 1px 5px rgba(0,0,0,0.1);
-  padding: 20px;
-  margin: 20% auto;
-  padding: 0 auto;
-  overflow: auto; /* Enable scroll if needed */
-}
-
-div.login2 ul li {
-	
-}
-
-a i.fa-times {
-  float: right;
-  margin-bottom: 20px;
-  position: relative;
-}
-
-div.modal2 {
+date {
 	display: none;
 }
 
-div.modal2.show {
+div.article {
+	line-height: 135%;
+}
+
+div.article p, div.article li {
+	padding-bottom: 20px;
+}
+
+div.article h3 {
+	padding-bottom: 20px;
+}
+
+div.article h4 {
+	padding-bottom: 20px;
+	font-size: 14pt;
+	font-family: Arial;
+}
+
+p em, li em {
+	font-style: italic;
+}
+
+p strong, li strong {
+	font-weight: bold;
+}
+
+ul li::before {
+	Content: " ";
+	border-radius: 100%;
+	background-color: #F58EA8;
+	width: 10px;
+	height: 10px;
+	display: block;
+	position: absolute;
+	margin-left: -20px;
+	margin-top: 5px;
+}
+
+ul li {
+	margin-left: 20px;
+}
+
+@media (min-width: 768px) {	
+
+
+}
+
+@media (max-width: 800px) {	
+
+date {
 	display: block;
 }
 
-/*Search Bar*/
-
-form {
-  width: 100%;
-  border-bottom: 5px solid white;
+div#title h1 {
+	margin: 10px 0;
 }
 
-form input {
-  font-family: sans-serif;
-  font-size: 12pt;
-  height: 40px;
-  border: 0px;
-  width: 100%;
-  color: #110b54;
+div.container-fluid {
+	padding: 0px;
 }
 
-/*Desktop*/
-
-
-div#content h1, div.title h1 {
-  margin-bottom: 80px;
-}
-
-div.post {
-  padding: 30px;
-  margin-left: 100px;
-  margin-right: 100px;
-  margin-bottom: 100px;
-  background-color: white;
-  background-position: center;
-  border: 5px solid pink;
-}
-
-div.archives {
-background-color: pink;
-background-position: center;
-border-radius: 0px;
-margin-left: 0px;
-margin-right: 0px;
-margin-bottom: 0px;
-}
-
-div.post div.postimg {
-  margin: 0 auto;
-  padding: 0 auto;
-  width: 100%;
-}
-
-div#navigation {
-  width: 50%;
-  height: 100vh;
-  padding: 50px;
-  float: left;
-  position: fixed;
-  background-color: white;
-  border: 5px solid pink;
+div#content a.link {
+	/*margin: 0 auto;*/
+	margin-bottom: 20px;
 }
 
 div#content {
-  width: 50%;
-  padding: 50px;
-  float: right;
-  border: 5px solid white;
+	padding: 10px;
 }
 
-/*mobile*/
-
-@media (max-width: 600px) {
-
-
-div.post {
-  margin-left: 0px;
-  margin-right: 0px;
-  padding: 10px;
-}
-	
-div#content {
-width: 100%;
-padding: 20px 0px 0px 0px;
+img.logo {
+	width:50%;
 }
 
-div#navigation {
-width: 100%;
-position:relative;
-padding: 20px 0px 0px 0px;
+div#title h1 {
+	font-size: 20pt;
+}
+
+div#title h2 {
+	font-size: 12pt;
+}
+
+div.post a.link {
+	width: 65%;
+}
+
+div#mainarea {
+	width: 100%;
+}
+
+div#sidebar {
+	width:100%;
+}
+
+div#sidebar div.widget {
+	margin-top: 20px;
+	margin-left: 0px;
+	margin-bottom: 0px;
 }
 
 }
