--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,8 +46,8 @@
 </script>
 
 <!--<script src="/index.js"></script>-->
-<link href="https://dragons.cozymaus/cssreset.css" rel="stylesheet">
-<link href="https://dragons.cozymaus/index.css" rel="stylesheet">
+<link href="https://dragons.cozymaus.com/cssreset.css" rel="stylesheet">
+<link href="https://dragons.cozymaus.com/index.css" rel="stylesheet">
 <link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon }}">
 
 </head>
