--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
 
     <div id="title">
       <h1><a href="https://dragons.cozymaus.com/">Dragon&nbsp;Database</a></h1>
-      <h2>🖱️ TSTMM: A Writing Project by <a href="https://cozymaus.com" target="_blank">CozyMaus</a> 🐭</h2>
+      <h2>🖱️ A Project by <a href="https://cozymaus.com" target="_blank">CozyMaus</a> 🐭</h2>
     </div>
 
     <!--<form method="get" action="https://www.google.com/search" target="_blank">
