--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -5,14 +5,14 @@
 		🦋 Type of dragon: 
 		{% for tags in post.type %}
 
-		[&nbsp;<a href="/type/#{{ tags }}" title="See all games with dragons of this type.">{{ tags }}</a>&nbsp;]  
+		[&nbsp;{{ tags }}&nbsp;]  
 
 		{% endfor %}
 		
 		<br>📝 Genre: 
 		{% for tags in post.genre %}
 
-		[&nbsp;<a href="/genre/#{{ tags }}" title="See all {{ tags }} games.">{{ tags }}</a>&nbsp;]  
+		[&nbsp;{{ tags }}&nbsp;]  
 
 		{% endfor %}
 		
@@ -21,7 +21,7 @@
 		💻 Platform:			
 		{% for tags in post.platform %}
 		
-		[&nbsp;<a href="/platform/#{{ tags | downcase | remove: ' ' }}" title="See all games on {{ tags }}."> {{ tags }} </a>&nbsp;] 
+		[&nbsp;{{ tags }}&nbsp;] 
 
 		{% endfor %} 
 
@@ -29,7 +29,7 @@
 
 		{% for tags in post.developer %}
 
-		[&nbsp;<a href="https://www.google.com/search?q='{{ tags }}'" target="_blank" title="Learn more about {{ tags }}.">{{ tags }}</a>&nbsp;]  
+		[&nbsp;{{ tags }}&nbsp;]  
 
 		{% endfor %}
 
@@ -43,18 +43,18 @@
 		{% if post.series != nil %} <br>📚 Franchise: 
 
 		{% for tags in post.series %}
-		[&nbsp;<a href="https://www.google.com/search?q='{{ tags }}'" target="_blank" title="Find {{ tags }}.">{{ tags }}</a>&nbsp;] 
+		[&nbsp;{{ tags }}&nbsp;] 
 		{% endfor %}
 
 		{% endif %} 
 
 		{% if post.suggester != nil %}
-		<br>❤️ Suggested by <a href="{{ post.suggesterurl }}" target="_blank" title="The awesome {{ post.suggester }} suggested this game!">{{ post.suggester }}</a>
+		<br>❤️ Suggested by {{ post.suggester }}
 		{% endif %}
 		<br><br>
 		
 		📖 {{ post.excerpt }}<br><br>
-		<a href="{{ post.link }}" target="_blank" title="Read more about {{ post.title }} on Wikipedia.org.">ℹ️ More information</a> </p>
+		ℹ️ More information: {{ post.link }} </p>
 		
 		🔗 <input type="text" value="{{ site.url }}/#{{ post.title | downcase | remove: ' ' }}" id="myInput {{ post.title }}">
 		<!--<button onclick="myFunction()" title="Copy link to {{ post.title }}.">Copy</button>-->
