--- a/_includes/credits.html
+++ b/_includes/credits.html
@@ -1,8 +1,5 @@
 <div id="credits">
-	<p style="text-align:center;">©	<script>
-			var year = new Date();
-			document.write(year.getFullYear());
-		</script> <a href="https://cozymaus.com" target="_blank">CozyMaus</a>. <br>There are currently <strong>{{ site.posts | size }} entries</strong> in this database. 
+	<p style="text-align:center;">©	{{ site.time | date: '%Y' }} <a href="https://cozymaus.com" target="_blank">CozyMaus</a>. 
 
 		 <!--<a id="creds">Credits</a>.-->
 	</p>
