--- a/_includes/credits.html
+++ b/_includes/credits.html
@@ -1,6 +1,3 @@
 <div id="credits">
-	<p style="text-align:center;">©	{{ site.time | date: '%Y' }} <a href="https://cozymaus.com" target="_blank">CozyMaus</a>. 
-
-		 <!--<a id="creds">Credits</a>.-->
-	</p>
+	<p style="text-align:center;">©	{{ site.time | date: '%Y' }} <a href="https://cozymaus.com" target="_blank">CozyMaus</a></p>
 </div>
