--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -69,12 +69,26 @@
     <div id="mainarea">
 
       <div id="content">
+        
+        <h2>{{ page.title }}</h2>
+        <p style="font-style: italic; padding-bottom:20px; line-height:135%;">
+        Posted on {{ page.written | date: '%A, %B %d, %Y' }} <br>
+        <!--Posted {{ page.date | date: '%A, %B %d, %Y' }} in <a href="https://cozymaus.com/pink-box/{{ page.category | downcase  }}">{{ page.category }}</a>-->
+        </p>
 
+        <p style="font-style:italic; padding-bottom:20px; line-height:135%;">{{ page.excerpt }}</p>
+        
+        <div class="article">
         {{content}}
+          
+           {% include  post_preview.html %}
+          
+        </div>
 
+        {% include disqus_comments.html %}
       </div>
 
-  </div>
+    </div>
 
       <div id="sidebar">
         {% include about.html %}
