--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -72,7 +72,7 @@
         
         <h2>{{ page.title }}</h2>
         <p style="font-style: italic; padding-bottom:20px; line-height:135%;">
-        Posted on {{ page.written | date: '%A, %B %d, %Y' }} <br>
+        Posted on {{ page.posted | date: '%A, %B %d, %Y' }} <br>
         <!--Posted {{ page.date | date: '%A, %B %d, %Y' }} in <a href="https://cozymaus.com/pink-box/{{ page.category | downcase  }}">{{ page.category }}</a>-->
         </p>
 
