--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -57,7 +57,7 @@
 		
 		ℹ️ More information: {{ page.link }} </p>
 		<br>
-		🔗 <input type="text" value="{{ site.url }}/{{ page.url }}" id="myInput {{ page.title }}">
+		🔗 <input type="text" value="{{ site.url }}{{ page.url }}" id="myInput {{ page.title }}">
 		<!--<button onclick="myFunction()" title="Copy link to {{ post.title }}.">Copy</button>-->
 	
 </div>
