--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
   <div class="container-fluid">
 
     <div id="title">
-      <h1><a href="https://dragons.cozymaus.com/">Dragon&nbsp;Database</a></h1>
+      <h1><a href="https://dragons.cozymaus.com/">Dragon Database</a></h1>
       <h2>🖱️ A Project by <a href="https://cozymaus.com" target="_blank">CozyMaus</a> 🐭</h2>
     </div>
 
