--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@
 <meta name="author" content="{{ site.author_name }}">
 <meta name="twitter" content="{{ site.author_name }}">
 
-<title>{{site.title}} {{ page.title }}</title>
+<title>{{site.title}} | {{ page.title }}</title>
 
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet"> 
 
@@ -57,7 +57,7 @@
   <div class="container-fluid">
 
     <div id="title">
-      <h1><a href="https://dragons.cozymaus.com/">Dragon&nbsp;Database</a></h1>
+      <h1><a href="https://dragons.cozymaus.com/">Dragon Database</a></h1>
       <h2>🖱️ A Project by <a href="https://cozymaus.com" target="_blank">CozyMaus</a> 🐭</h2>
     </div>
 
