--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 <meta name="author" content="{{ site.author_name }}">
 <meta name="twitter" content="{{ site.author_name }}">
 
-<title>{{site.title}} {{ page.title }}</title>
+<title>{{site.title}}</title>
 
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet"> 
 
