--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,6 +77,8 @@
   </div>
 
       <div id="sidebar">
+        
+        {% include search.html %}
         {% include about.html %}
         {% include twitter.html %}
         {% include credits.html %}
