--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -89,6 +89,8 @@
     </div>
 
       <div id="sidebar">
+        
+        {% include search.html %}
         {% include about.html %}
         {% include twitter.html %}
         {% include credits.html %}
