--- a/index.css
+++ b/index.css
@@ -370,6 +370,12 @@ input {
 width:100%;
 }
 
+div#comments {
+width: 95%;
+margin-left: auto;
+margin-right: auto;
+}
+
 @media (min-width: 768px) {	
 
 
