--- a/index.css
+++ b/index.css
@@ -52,7 +52,7 @@ div#top-menu-left, div#menu {
 h1, h2, h3, h4, h5, h6 {
 
 }
-p, table td, ul li, h3, h2, h1, select, a {
+p, table td, ul li, h3, h2, h1, select, a, input {
 	font-family: Arial, sans-serif;
 }
 
