--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,5 +4,39 @@
 <!--<img class="logo" src="{{ site.image }}">-->
 </p>
 <p style="line-height:135%;"">Hey there! This website is still under construction.</p>
+                             
+<h2>🗄️ About this Database</h2>
+
+
+<p>Site last updated {{ site.time | date: '%B %d, %Y' }}.</p> 
+  
+<h3>Purpose</h3>
+
+<p>
+
+This website was originally made to record all video games in which animals are important to the plot or gameplay, but I realized this topic was way too broad. This website will now record only games featuring dragons.
+  
+</p>
+
+
+<h3>Why?</h3>
+
+<p>
+
+  Dragons are cool. They exist in the stories of many cultures all around the world. There's a wide variety of them, and they're everywhere, yet I think there aren't enough dragons in video games. I want this website to record all of these tiles, no matter how obscure they may be, so that a wider audience can find them and enjoy them.
+  
+</p>
+  
+<h3>How it Works</h3>
+
+<p class="excerpt">I made this website by hand from scratch and use <a href="https://pages.github.com/" target="_blank">Github Pages</a> to host it. You can check out the source code <a href="http://github.com/cozymaus/kemono-database" target="_blank">here</a>. This website is a static website generated using the <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> static site generator. Entries must be manually added as a markup file in the _posts folder.</p>
+  
+<h3>Contributions</h3>
+
+<p>
+The Contribute button on the navigation menu goes to an external Google Form where you can submit any suggestions for games that you think should be listed.
+</p>
+  
+<p>If you found this website useful and enjoy my work, feel free to share it with others. Also please consider following me on <a href="http://twitter.com/cozymaus" target="_blank">Twitter</a> for progress updates on all my projects. You can also help by donating at <a href="https://paypal.me/cozymaus" target="_blank">PayPal.me/cozymaus</a>.</p>
 
 </div>
