--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
 <p style="text-align:center;">
 <!--<img class="logo" src="{{ site.image }}">-->
 </p>
-<p style="line-height:135%;"">Hey there! This website is still under construction.</p>
+<p>Hey there! This website is still under construction.</p>
                              
 <h2>🗄️ About this Database</h2>
 
