--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,6 +5,6 @@
 </p>
 <p>Hey there! This website is still under construction.</p>
                              
-
+  <p><a href="/about">About</a></p>
 
 </div>
