--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -80,7 +80,7 @@
           
            {% include  post_preview.html %}
                   {{content}}
-
+          <p><a href="/">« Back to all entries</a></p>
         </div>
         {% include disqus_comments.html %}
       </div>
