--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,6 +79,7 @@
       <div id="sidebar">
         
         {% include search.html %}
+        {% include support.html %}
         {% include about.html %}
         {% include twitter.html %}
         {% include credits.html %}
