--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -90,6 +90,7 @@
       <div id="sidebar">
         
         {% include search.html %}
+        {% include support.html %}
         {% include about.html %}
         {% include twitter.html %}
         {% include credits.html %}
