--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,8 +3,9 @@
 <p style="text-align:center;">
 <!--<img class="logo" src="{{ site.image }}">-->
 </p>
-<p>Hey there! This website is still under construction.</p>
-                             
-  <p><a href="/about">About</a></p>
+
+<p>Welcome to my Dragon Database, where you can discover all the video games featuring dragons as playable characters!</p>
+  
+<p><a href="/about">Read more about</a> this website or <a href="/">suggest</a> games that you think should be included.</p>
 
 </div>
