--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,11 +77,11 @@
   </div>
 
       <div id="sidebar">
-        
+        <div class="side-widgets">
         {% include search.html %}
         {% include about.html %}
         {% include credits.html %}
-
+        </div>
       </div>
 
 
