--- a/index.css
+++ b/index.css
@@ -102,7 +102,7 @@ body {
 div#content {
 	width: 100%;
 	margin: 0 auto;
-	padding: 20px;
+	padding: 20px 20px 0 20px;
 	background-color: white;
 }
 
@@ -424,7 +424,7 @@ div#content a.link {
 }
 
 div#content {
-	padding: 10px;
+	padding: 20px 10px 0 10px;
 }
 
 img.logo {
