--- a/index.css
+++ b/index.css
@@ -55,6 +55,9 @@ h1, h2, h3, h4, h5, h6 {
 p, table td, ul li, h3, h2, h1, select, a, input {
 	font-family: Arial, sans-serif;
 	line-height:135%;
+}
+
+p, table td, ul li, select, a {
 	padding-bottom:10px;
 }
 
