--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -3,8 +3,8 @@
 
 		📅 Released {{ page.date | date_to_long_string }}	<br>
 
-		🐉 Type of animal: 
-		{% for tags in page.type %}
+		🐉 Species of animal: 
+		{% for tags in page.species %}
 
 		[&nbsp;{{ tags }}&nbsp;]  
 
