--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,7 +62,7 @@
     </div>
 
     <!--<form method="get" action="https://www.google.com/search" target="_blank">
-        <input type="hidden" name="sitesearch" value="animals.cozymaus.com" />
+        <input type="hidden" name="sitesearch" value="lizlorena.com/animals" />
         <input type="text" name="q" maxlength="255" placeholder="Search with Google" />
         </form>-->
     
