--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,8 +46,8 @@
 </script>
 
 <!--<script src="/index.js"></script>-->
-<link href="{{ site.url }}/animals/cssreset.css" rel="stylesheet">
-<link href="{{ site.url }}/animals/index.css" rel="stylesheet">
+<link href="/howly/cssreset.css" rel="stylesheet">
+<link href="/howly/index.css" rel="stylesheet">
 <link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon }}">
 
 </head>
